<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/outer_space_crayola">

        <Button
            android:id="@+id/orderFoodButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black_coral"
            android:text="@string/order_food"
            android:textAllCaps="false"
            android:textColor="@color/mint_cream"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/reserveTableButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reserveTableButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black_coral"
            android:text="@string/reserve_table"
            android:textAllCaps="false"
            android:textColor="@color/mint_cream"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/ReservationsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderFoodButton" />

        <Button
            android:id="@+id/ReservationsButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black_coral"
            android:text="@string/reservations_button"
            android:textAllCaps="false"
            android:textColor="@color/mint_cream"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reserveTableButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>